--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ https://www.tooplate.com/view/2120-ben-resume
                    <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
                         <div class="hero-text">
 
-                            <h1 class="hero-title">👋 Emmanuel, a Architect Cloud</h1>
+                            <h1 class="hero-title">👋 Emmanuel, an Architect Cloud</h1>
 
                             <a href="#" class="email-link">
-                                emmanuelmateo@outlook.com
+                                emateo@itskillpe.com
                             </a>
                           
                         </div>
@@ -98,9 +98,9 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="row">
 
                 <div class="col-lg-6 col-md-6 col-12">
-                    <h3 class="mb-4">This is Ben's Resume</h3>
+                    <h3 class="mb-4">This is Emmanuel's Resume</h3>
 
-                    <p>Ben Resume HTML Template is brought to you by <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate website</a>. You can feel free to edit and use this page for your small site. You are allowed to use this HTML template for any kind of purpose.</p>
+                    <p>Emmanuel Resume HTML Template is brought to you by <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate website</a>. You can feel free to edit and use this page for your small site. You are allowed to use this HTML template for any kind of purpose.</p>
 
                     <p>However, please do not re-distribute the downloadable template ZIP file on any template collection website. This is strongly prohibited. Please contact Tooplate for more information.</p>
 
@@ -111,7 +111,7 @@ https://www.tooplate.com/view/2120-ben-resume
 
                         <li><strong>Website :</strong> itskillpe.com</li>
 
-                        <li><strong>Email :</strong> emmanuelmateo@outlook.com</li>
+                        <li><strong>Email :</strong> emateo@itskillpe.com</li>
                     </ul>
                 </div>
 
@@ -345,23 +345,23 @@ https://www.tooplate.com/view/2120-ben-resume
           </div>
 
             <div class="mx-auto col-lg-4 col-md-6 col-12">
-                <h3 class="my-4 pt-4 pt-lg-0">Say hello</h3>
+                <h3 class="my-4 pt-4 pt-lg-0">Contacto</h3>
 
-                <p class="mb-1">010-020-0340</p>
+                <p class="mb-1">+51 922 748 450 </p>
 
                 <p>
                     <a href="#">
-                        hello@company.co
+                        info@itskillpe.com
                     <i class="fas fa-arrow-right custom-icon"></i>
                     </a>
                 </p>
 
                 <ul class="social-links mt-2">
-                    <li><a href="https://fb.com/tooplate" rel="noopener" class="fab fa-facebook"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-twitter"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-instagram"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-linkedin"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
+                    <li><a href="https://fb.com/itskillpe" rel="noopener" class="fab fa-facebook"></a></li>
+                    <li><a href="itskillpe.com" rel="noopener" class="fab fa-twitter"></a></li>
+                    <li><a href="itskillpe.com" rel="noopener" class="fab fa-instagram"></a></li>
+                    <li><a href="itskillpe.com" rel="noopener" class="fab fa-linkedin"></a></li>
+                    <li><a href="itskillpe.com" rel="noopener" class="fab fa-youtube"></a></li>
                 </ul>
                 
               <p class="copyright-text mt-5 pt-3">Copyright &copy; 2020 Ben Resume Page</p>
